# cuda_ml_infer_practice

Tilling/: day6.cu
Triton/: swish_kernel_bench.py  triton_kernel.py
Triton/flash-attention-triton/: .gitignore  LICENSE  README.md  RESULTS.md  conftest.py  pyproject.toml
Triton/flash-attention-triton/benchmark/: benchmark_attention.py  profile_attention.py  test.py
Triton/flash-attention-triton/flash_attn_triton/: __init__.py  kernel.py  utils.py  wrapper.py
Triton/flash-attention-triton/tests/: test_correctness.py  test_vs_pytorch.py
cuda_kernels_profilling/: Readme.md  matmul_naive.cu  matmul_tiled.cu  run.cpp  saxpy.cu  softmax.cu
parallel_computation/: kernel.cu
